Bug 316919 - dialog buttons of notifications configuration inconsistent
Summary: dialog buttons of notifications configuration inconsistent
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.5.80
Platform: openSUSE Linux
: NOR minor
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2013-03-17 16:39 UTC by Silver Salonen
Modified: 2013-04-11 14:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Silver Salonen 2013-03-17 16:39:12 UTC
When changing contact's notifications, there are only Apply and Cancel buttons in the dialog. This is quite inconsistent with other KDE applications.

Reproducible: Always

Steps to Reproduce:
1. Open contacts
2. Right click on contact and choose "Configure Notifications ..."
Actual Results:  
There are Apply and Cancel buttons in the dialog.

Expected Results:  
I believe there should be OK and Cancel buttons (or OK, Apply and Cancel).

The space before "..." is redundant too?
Comment 1 Martin Klapetek 2013-03-17 17:36:20 UTC
Confirming, thanks for the report.

Ideally there should be all three - OK, Apply and Cancel.

The space is fixed now.
Comment 2 Martin Klapetek 2013-04-11 14:26:48 UTC
Git commit 14b0651de397e1e80d88a5c834f19812d7dd508c by Martin Klapetek.
Committed on 11/04/2013 at 16:26.
Pushed by mklapetek into branch 'kde-telepathy-0.6'.

Add 'Ok' button to the notifications config dialog

Reviewed-by: David Edmundson
FIXED-IN: 0.6.1

M  +9    -1    KTp/Widgets/notificationconfigdialog.cpp
M  +1    -0    KTp/Widgets/notificationconfigdialog.h

http://commits.kde.org/telepathy-common-internals/14b0651de397e1e80d88a5c834f19812d7dd508c