Add 'Ok' button to the notifications config dialog

Reviewed-by: David Edmundson
BUG: 316919
FIXED-IN: 0.6.1