KTp/Widgets/notificationconfigdialog.h
@@ -44,6 +44,7 @@ private Q_SLOTS:
     void saveConfig();
     void updateNotifyWidget(const int selection);
     void defaults();
+    void onOkClicked();
 };
 
 }
